@@ -1,6 +1,9 @@
 Changelog for Miosix np embedded OS
 
 v1.59
+- Extended boot improvements to strive mini board
+- Forgot to add util/crc16.cpp to the makefile buid rules
+- New target board: Strive. Thanks to Yury Kuchura for contributing the code.
 - Improved Thread::join(): when joining a thread, deallocate all its resources
   immeadiately.
 - Added tests to testsuite for endianness.h
